# OpenFiles

./: .gitignore  .gitmodules  .lldbinit  AZURE.md  CMakeLists.txt  DFS.md  LINUX.md  Makefile  README.md
configs/: android  android-nodebug-smbserver.xml  android-smb  android-smb-debug  android-smb-release  android_arm64-v8a-debug-smbserver.xml  android_arm64-v8a-nodebug-smbserver.xml  android_x86-debug-smbserver.xml  android_x86-nodebug-smbserver.xml  azure.xml  centos-el8  centos-el8-jni  darwin_debug.xml  darwin_debug_linux.xml  default  linux  linux-debug-smbclient-cd.xml  linux-debug-smbclient.xml  linux-debug-smbserver-session-encrypt.xml  linux-debug-smbserver-tree-noencrypt.xml  linux-debug-smbserver-v2.02.xml  linux-debug-smbserver-v2.10.xml  linux-debug-smbserver-v3.02.xml  linux-debug-smbserver-v3.11-ccm.xml  linux-debug-smbserver-v3.11-gcm.xml  linux-debug-smbserver.xml  linux-nodebug-smbclient-awsntlm.xml  linux-nodebug-smbclient-awsntlmdfs.xml  linux-nodebug-smbclient-vapordfs.xml  linux-nodebug-smbclient-vaporntlm.xml  linux-nodebug-smbclient.xml  linux-nodebug-smbserver.xml  linux-perf  linux-smb  linux-smbfs  linux-smbloop  linux-smbloop-gtls  linux-smbloop-mbed  linux_debug.xml  linux_loop.xml  (+25 more)
doc/: config.h  headerFile  openfiles.h
doc/html/: app_8h__incl.md5  async.html  config_8h.html  config_8h_source.html  configuration.html  core_8h__dep__incl.md5  dir_4c3f239c434b24c85946e97de012ff71.html  dir_4c3f239c434b24c85946e97de012ff71_dep.md5  dir_b0902a6086823a668e16bf15a6b5d4cf.html  dir_b760e47ca995083f2984f063658afb89.html  dir_b760e47ca995083f2984f063658afb89.js  dir_e68e8157741866f444e17edd764ebbae.html  dir_e68e8157741866f444e17edd764ebbae.js  dom_8h.html  dom_8h.js  dom_8h__incl.md5  env_8h_source.html  event_8h.html  event_8h.js  file_8h__incl.md5  files.html  files_dup.js  functions_a.html  functions_c.html  functions_h.html  functions_s.html  functions_vars_c.html  functions_vars_l.html  functions_vars_m.html  functions_vars_r.html  functions_vars_t.html  functions_vars_w.html  globals.html  globals_a.html  globals_e.html  globals_enum.html  globals_eval.html  globals_eval.js  globals_eval_c.html  globals_eval_e.html  (+99 more)
doc/html/search/: all_4.js  all_5.js  all_9.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_9.js  files_4.js  files_a.js  files_d.js  files_f.js  functions_0.js  functions_5.js  functions_6.js  groups_5.js  pages_1.js  pages_2.js  pages_5.js  searchdata.js  variables_11.js  variables_12.js  variables_4.js  variables_6.js  variables_a.js  variables_b.js  variables_d.js
docs/: annotated_dup.js  app_8h_source.html  building.html  config_8h.html  config_8h_source.html  console_8h.html  console_8h_source.html  core_8h.html  developing.html  dir_000004_000002.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_138aff360eb965c43b94267b8d1ce09e.js  dir_2e1bc3f74c8e6e1511538b8789051843.html  dir_2e1bc3f74c8e6e1511538b8789051843_dep.md5  dom_8h_source.html  env_8h.html  env_8h__incl.md5  event_8h__incl.md5  file_8h__dep__incl.md5  files.html  files_dup.js  framework_8h.js  framework_8h__incl.md5  framework_8h_source.html  fstype_8h__dep__incl.md5  fstype_8h_source.html  functions_d.html  functions_i.html  functions_m.html  functions_o.html  functions_vars_a.html  functions_vars_h.html  functions_vars_o.html  functions_vars_s.html  functions_vars_v.html  globals_defs_i.html  globals_defs_s.html  globals_defs_t.html  globals_eval_d.html  globals_eval_n.html  (+100 more)
docs/html/: _l_i_c_e_n_s_e_8md.html  annotated.html  app_8h.html  app_8h.js  classes.html  config_8h.html  config_8h.js  config_8h_source.html  console_8h.js  console_8h__incl.md5  core_8h.js  core_8h__incl.md5  core_8h_source.html  dir_2e1bc3f74c8e6e1511538b8789051843.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_4c3f239c434b24c85946e97de012ff71.js  dir_b0902a6086823a668e16bf15a6b5d4cf.js  download.html  env_8h.js  event_8h_source.html  examples.html  examples.js  file_8h.html  file_8h.js  file_8h_source.html  files.html  files_dup.js  framework_8h.html  fstype_8h.html  fstype_8h.js  functions.html  functions_b.html  functions_e.html  functions_f.html  functions_l.html  functions_n.html  functions_p.html  functions_r.html  functions_t.html  (+173 more)
docs/html/search/: all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_6.js  all_7.js  all_b.js  all_c.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_6.js  enumvalues_8.js  files_1.js  files_2.js  files_6.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  groups_2.js  groups_3.js  groups_6.js  groups_7.js  pages_4.js  pages_6.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_10.js  variables_13.js  (+5 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_15.js  all_8.js  all_a.js  all_d.js  all_e.js  classes_1.js  enums_1.js  enumvalues_7.js  files_3.js  files_5.js  files_9.js  files_c.js  functions_1.js  functions_8.js  groups_0.js  groups_1.js  groups_8.js  groups_9.js  groups_a.js  groups_b.js  pages_0.js  pages_3.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_7.js  variables_8.js  variables_9.js
documentation/: config.h  openfiles.h  openfiles2.0testplan.xlsx
include/ofc/: config.h.in  version.h
scripts/: krb5.conf  openfiles_path.sh  resolv.conf
test/: gdb-ctest
